MDEV-34529  Shrink the system tablespace when system tablespace contains MDEV-30671 leaked undo pages

- InnoDB fails to shrink the system tablespace when it contains
the leaked undo log pages caused by MDEV-30671.

- Introduce the variable "innodb_sys_tablespace_shrink_extensive"
to iterate through all used system tablespace index segments and
find the maximum used extent.

To find the maximum used extent in system tablespace, InnoDB
does the following:

i) Iterate through the SYS_INDEXES table and get all the
index root pages which is in system tablespace.
ii) Get the leaf segment page and non-leaf segment page
iii) Get the maximum used extents from
FSEG_NOT_NULL, FSEG_FULL list and fragment pages of both
leaf and non-leaf segment
iv) Add the doublewrite buffer extents

fsp_traverse_extents(): Check whether current extent exceeds
the maximum used extent. If it is then we can remove the extent
from system tablespace.