storage/innobase/srv/srv0srv.cc
@@ -1579,6 +1579,6 @@ void srv_purge_shutdown()
     srv_shutdown_purge_tasks();
     if (!srv_fast_shutdown && !high_level_read_only && srv_was_started &&
         !opt_bootstrap && srv_operation == SRV_OPERATION_NORMAL)
-      fsp_system_tablespace_truncate();
+      fsp_system_tablespace_truncate(true);
   }
 }
